# WasmEdge

./: CMakeLists.txt
.github/workflows/: release.yml  reusable-build-on-alpine-dynamic.yml  reusable-build-on-debian-dynamic.yml
bindings/rust/wasmedge-sdk/src/: vm.rs
cmake/: WASINNDeps.cmake
include/plugin/: plugin.h
lib/plugin/: plugin.cpp
plugins/: CMakeLists.txt
plugins/wasi_nn/: CMakeLists.txt  sd.cpp  sd.h  types.h  wasinnenv.cpp  wasinnenv.h
plugins/wasi_nn_rust/: CMakeLists.txt  Cargo.toml
plugins/wasi_nn_rust/src/: lib.rs
plugins/wasmedge_rustls/: Cargo.toml
test/plugins/: CMakeLists.txt
test/plugins/wasi_nn/: wasi_nn.cpp
test/plugins/wasi_nn_rust/: CMakeLists.txt  wasi_nn.cpp
utils/: install.py  install.sh
utils/docker/: Dockerfile.alpine-dynamic  Dockerfile.debian-dynamic  docker-bake.alpine-dynamic.hcl  docker-bake.debian-dynamic.hcl
